# InfiniteSurfaceEditor

./: CMakeLists.txt  CMakePresets.json  README.md  compile_shaders.bat
src/: EventSystem.cpp  EventSystem.h  InfiniteSurfaceEditor.cpp  InfiniteSurfaceEditor.h
src/renderer/: VkResultHandler.cpp  VkResultHandler.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererUgly.cpp  VulkanRendererUgly.h
src/rendering/: VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererUgly.cpp  VulkanRendererUgly.h  WindowEvents.cpp  WindowEvents.h
src/rendering/shaders/: frag.glsl  vert.glsl
src/util/: FileReader.cpp  FileReader.h  SafeQueue.hpp
